2009-10-09  Enrica Casucci  <enrica@apple.com>

Reviewed by Adele Peterson.

        Undoing a indent removes text instead of it's formatting.
        <rdar://problem/7169206>
        https://bugs.webkit.org/show_bug.cgi?id=28722
        Added test case for https://bugs.webkit.org/show_bug.cgi?id=23995

        * editing/execCommand/19653-1-expected.txt: Re-baselined.
        * editing/execCommand/indent-div-inside-list-expected.txt: Re-baselined.
        * editing/execCommand/indent-nested-blockquotes-expected.txt: Re-baselined.
        * editing/execCommand/indent-nested-div-expected.txt: Re-baselined.
        * editing/execCommand/indent-second-paragraph-in-blockquote-expected.txt: Re-baselined.
        * editing/execCommand/indent-with-style-expected.txt: Added.
        * editing/execCommand/indent-with-style.html: Added.
        * editing/undo/undo-indent-expected.txt: Added.
        * editing/undo/undo-indent.html: Added.
        * platform/mac/editing/execCommand/4641880-2-expected.txt: Re-baselined.
        * platform/mac/editing/execCommand/4916541-expected.txt: Re-baselined.
        * platform/mac/editing/execCommand/5138441-expected.txt: Re-baselined.
        * platform/mac/editing/execCommand/5481523-expected.txt: Re-baselined.
        * platform/mac/editing/execCommand/indent-selection-expected.txt: Re-baselined.
2009-10-09  Enrica Casucci  <enrica@apple.com>

        Reviewed by Adele Peterson.

        Undoing a indent removes text instead of it's formatting.
        <rdar://problem/7169206>
        https://bugs.webkit.org/show_bug.cgi?id=28722
        Restored the behavior prior to http://trac.webkit.org/changeset/46143. This change implemented the
        indent command making simple DOM operation, without using moveParagraph which cause undo to be broken.

        Added editing/undo/undo-indent.html test.

        * editing/IndentOutdentCommand.cpp:
        (WebCore::IndentOutdentCommand::prepareBlockquoteLevelForInsertion): Restored.
        (WebCore::IndentOutdentCommand::tryIndentingAsListItem): Merged changes.
        (WebCore::IndentOutdentCommand::indentIntoBlockquote): Restored.
        (WebCore::IndentOutdentCommand::indentRegion): Restored and added call to updateLayout to
        ensure TextIterator could correctly calculate the position starting from the index.
        * editing/IndentOutdentCommand.h: Restored.

Canonical link: https://commits.webkit.org/40927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49405 268f45cc-cd09-0410-ab3c-d52691b4dbfc